language/move-lang/tests/move_check/parser/function_type_extra_comma.exp
error: 

   ┌── tests/move_check/parser/function_type_extra_comma.move:2:8 ───
   │
 2 │     fn<,T>() { }
   │        ^ Expected a type parameter
   │

